tests/ui/enum.stderr
error: enum are not supported.
 --> $DIR/enum.rs:4:1
  |
4 | / enum ExampleEnum {
5 | |     First,
6 | |     Second,
7 | |     Third { a: String, b: usize },
8 | | }
  | |_^
